--- a/trevette-api/trevette-api.csproj
+++ b/trevette-api/trevette-api.csproj
@@ -14,6 +14,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Home\" />
+  </ItemGroup>
+
 
 
 </Project>
