--- a/trevette-api/trevette-api.csproj
+++ b/trevette-api/trevette-api.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
